--- a/src/app/page/client/checkout/checkout.component.html
+++ b/src/app/page/client/checkout/checkout.component.html
@@ -130,7 +130,7 @@
                 </div>
               </div>
               <div class="btn-link">
-                <button (click)="cartService.checkout().subscribe()" class="theme-btn theme-btn-eight">Passer votre commande <i class="icon-4"></i></button>
+                <button (click)="cartService.checkout()" class="theme-btn theme-btn-eight">Passer votre commande <i class="icon-4"></i></button>
               </div>
             </div>
           </div>
