--- a/src/app/page/mecanics/index-mechanic/index-mechanic.component.html
+++ b/src/app/page/mecanics/index-mechanic/index-mechanic.component.html
@@ -12,7 +12,7 @@
             <div>{{reservation.result.description}}</div>
           </div>
         </div>
-        <div style="display: flex; padding-left: 60%;padding-top: 10px;">
+        <div style="width: 30%;position: absolute;left: 55%; padding-top: 10px">
           <div>
             <button (click)="assign(reservation)" class="assign">Assign</button>
           </div>
