--- a/src/app/components/agenda/agenda.component.css
+++ b/src/app/components/agenda/agenda.component.css
@@ -1,20 +1,49 @@
+@media (min-width: 1000px) and (max-width: 1500px){
+  .title
+  {
+    padding-left: 50px;
+  }
+  .app-agenda{
+    padding-top: 50px;
+  }
+  .date{
+    width: 200px;
+    padding-left: 200px;
+  }
+  .button-position{
+    padding-left: 100px;
+  }
+  .btn{
+    padding-left: 45px;
+  }
+}
+
+@media (min-width: 1501px) and (max-width:1920px) {
+  .title
+  {
+    padding-left: 10px;
+  }
+  .app-agenda{
+    padding-left: 50px;
+  }
+  .date{
+    padding-left: 50px;
+    width: 150px;
+  }
+  .button-position{
+    padding-left: 40px;
+  }
+  .btn{
+    padding-left: 20px;
+  }
+}
+
 .btn{
-  padding-left: 30px;
   cursor: pointer;
 }
 
 h3 {
   margin: 0 0 10px;
-}
-
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
-}
-
-img::after{
-  width: 15px;
-  height: 15px;
 }
 
 dialog{
