--- a/src/app/page/chat/chat.component.css
+++ b/src/app/page/chat/chat.component.css
@@ -1,23 +1,174 @@
 ::ng-deep body{
   overflow: hidden;
 }
-.message-list{
-  padding-left: 10px;
+.message-container-header{
   padding-top: 20px;
-  width: 15%;
+  display: flex;
+  border-bottom: 1px solid black;
+}
+
+.message-container-header{
+  padding-left: 5px;
+}
+
+.btn{
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.btn:hover{
+  color: #D94032;
+}
+
+
+.message-content{
+  padding-left: 20px;
+}
+
+.message-list{
+  padding-top: 5px;
   overflow-y: scroll;
-  overflow-x: hidden;
-  max-height: calc(100vh - 100px) !important; /* Reduce by input height + margins */
-  padding-bottom: 60px !important; /* Space for input */
-  box-sizing: border-box !important;
+  max-height: 90vw;
 }
 
-.div-btn{
-  padding-right: 40px;
+.message-item{
+  padding-top: 10px;
+  display: flex;
+  border-bottom: 1px solid black;
+}
+
+.list-content{
+  max-width: 100px;
+}
+.last-message{
+  padding-top: 5px;
+  padding-left: 10px;
+}
+
+.content{
+  overflow-y: scroll;
+  direction: ltr;
+  width: 83vw;
+  max-height: 73vh;
+}
+
+.user-icon{
+  width: 40px;
+  height: 40px;
+}
+
+.message-content-header{
+  display:flex;
+  padding-top: 5px;
+  width: 83vw ;
+  border-bottom: 1px solid black;
+}
+
+.user-details{
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
+.message-input{
+  display: flex;
+  position:absolute;
+  bottom:0;
+  width:85vw;
+}
+
+.message-text{
+  width: 95%;
+}
+.message-text-area{
+  width: 99%;
+  text-indent: 1px;
+  vertical-align: center;
+  padding-top: 5px;
+  resize: none;
+  border-radius: 5px;
+}
+
+.message-text-area:focus{
+  border: 1px solid black;
+}
+.send{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 5px;
+}
+
+.online{
+  background: green;
+}
+
+.offline{
+  background: red;
+}
+.status{
+  font-weight: normal ;
+  font-size: 10px;
+
+}
+.icon{
+  margin-top: 3px;
+  border-radius: 100%;
+  width: 5px;
+  height: 5px;
+}
+
+.selected{
+  background-color: rgba(116, 184, 230, 0.61);
+}
+
+.unread{
+  font-weight: bold;
+}
+
+.text-content{
+  padding: 15px 15px;
+}
+.message{
+  content: "";
+  clear: both;
+  display: table;
+  width: max-content;
+  border: 1px solid black;
+  border-radius: 20px;
+  margin-top: 10px;
+  max-width: 300px;
+}
+.got{
   position: relative;
-  left: 45%;
+  left: 0;
+  margin-bottom: 10px;
+}
+.sent{
+  float: right;
+  background: #0d95e8;
+  color: white;
+  border: none;
 }
 
+@media (min-width: 1000px) and (max-width: 1500px){
+  .message-list{
+    width: 15vw;
+  }
+  .div-btn{
+    margin-left: 7vw;
+    padding-right: 10px;
+  }
+  .message-container-header{
+    width: 15vw;
+  }
+  .message-content{
+    width: 77vw;
+  }
+}
+
+/*
 .message-item{
   display: flex;
   border-bottom: 1px solid black;
@@ -64,26 +215,12 @@
   border-radius: 100% !important;
 }
 
-.status{
-  font-weight: normal ;
-  font-size: 10px;
-}
 
-.icon{
-  margin-top: 3px;
-  border-radius: 100%;
-  width: 5px;
-  height: 5px;
 
-}
 
-.online{
-  background: green;
-}
 
-.offline{
-  background: red;
-}
+
+
 
 .message-input{
   display: flex;
@@ -106,24 +243,6 @@
   max-height: 300px;
 }
 
-.send{
-  position: absolute;
-  bottom: 10px;
-  padding-left: 30px;
-}
-
-
-
-.message{
-  width: max-content;
-  border: 1px solid black;
-  border-radius: 50px;
-}
-
-.message:not(:first-child)
-{
-  margin-top: 10px;
-}
 
 .got{
   position: relative;
@@ -139,11 +258,10 @@
   color: white;
 }
 
-.text-content{
-  padding: 15px 15px;
-}
+
 
 .selected{
   background: #EAF4FF;
 }
 
+*/
