--- a/src/app/page/chat/chat.component.html
+++ b/src/app/page/chat/chat.component.html
@@ -14,7 +14,7 @@
       <div class="message-item" *ngIf="discussions?.length === 0">
         <div style="padding-top: 10px;">Vous n'avez aucune discussion ...</div>
       </div>
-      <div *ngFor="let discussion of discussions?.reverse();index as i" (click)="selectDiscussion(i)" [className]="discussion.isSelected ? 'selected message-item' : 'message-item'">
+      <div *ngFor="let discussion of discussions?.reverse();" (click)="selectDiscussion(discussion._id)" [className]="discussion.isSelected ? 'selected message-item' : 'message-item'">
         <div style="padding-bottom: 10px">
           <img src="../../../assets/images/user.png" class="user-icon" >
         </div>
