update menubar link

--- a/src/app/components/menubar-mechanic/menubar-mechanic.component.html
+++ b/src/app/components/menubar-mechanic/menubar-mechanic.component.html
@@ -6,12 +6,12 @@
         <!--Logo-->
         <div class="logo_menu">
           <div class="logo-box">
-            <div class="logo"><a href="index.html"><img src="assets/images/logo-2.png" alt="logo"></a></div>
+            <div class="logo"><a href="/mechanic"><img src="assets/images/logo-2.png" alt="logo"></a></div>
           </div>
         </div>
 
         <ul style="position: absolute;left: 75%;padding-top: 30px" class="right-info" >
-          <li><a href="#" class="search-btn"><div class="shopping-cart"><i class="fa fa-comments"></i><span class="count">2</span></div></a></li>
+          <li><a href="/chat" class="search-btn"><div class="shopping-cart"><i class="fa fa-comments"></i><span class="count">2</span></div></a></li>
           <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, {{username}}</span></p></a></li>
           <li><a (click)="logoff()" class="search-btn" style="cursor: pointer;"><i class="fa fa-power-off"></i></a></li>
         </ul>
