Add placeholder to textarea

--- a/src/app/page/chat/chat.component.html
+++ b/src/app/page/chat/chat.component.html
@@ -77,7 +77,7 @@
     </div>
     <div class="message-input">
       <div class="message-text">
-        <textarea [disabled]="isNewDiscussion" [(ngModel)]="chat.content" autosize [minRows]="1" [maxRows]="5" class="message-text-area"></textarea>
+        <textarea [disabled]="isNewDiscussion" [(ngModel)]="chat.content" autosize [minRows]="1" [maxRows]="5" class="message-text-area" placeholder="Aa"></textarea>
       </div>
       <div>
         <img
