--- a/src/app/page/chat/chat.component.css
+++ b/src/app/page/chat/chat.component.css
@@ -29,7 +29,8 @@
 .message-list{
   padding-top: 5px;
   overflow-y: scroll;
-  max-height: 90vw;
+  height: 85vh;
+  max-height: 85vh;
 }
 
 .message-item{
@@ -48,8 +49,7 @@
 .content{
   overflow-y: scroll;
   direction: ltr;
-  width: 83vw;
-  max-height: 73vh;
+
 }
 
 .user-icon{
@@ -83,9 +83,12 @@
   width: 99%;
   text-indent: 1px;
   vertical-align: center;
-  padding-top: 5px;
   resize: none;
-  border-radius: 5px;
+  border-radius: 15px;
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .message-text-area:focus{
@@ -152,6 +155,10 @@
 }
 
 @media (min-width: 1000px) and (max-width: 1500px){
+  .content{
+    width: 83vw;
+    max-height: 73vh;
+  }
   .message-list{
     width: 15vw;
   }
@@ -168,10 +175,14 @@
   .list-content{
     max-width: 100px;
   }
-
 }
 
 @media (min-width: 1501px){
+  .content{
+    width: 83vw;
+    height: 80vh;
+    max-height: 80vh;
+  }
   .list-content{
     max-width: 200px;
   }
