--- a/src/app/components/menubar-mechanic/menubar-mechanic.component.html
+++ b/src/app/components/menubar-mechanic/menubar-mechanic.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <ul style="position: absolute;left: 75%;padding-top: 30px" class="right-info" >
-          <li><a href="/chat" class="search-btn"><div class="shopping-cart"><i class="fa fa-comments"></i><span class="count">2</span></div></a></li>
+          <li><a href="/chat" class="search-btn"><div class="shopping-cart"><i class="fa fa-comments"></i><span class="count">{{localStorage.getItem("unreadCount")}}</span></div></a></li>
           <li><a href="#" class="search-btn"><i class="icon-user"></i> <p>My Account <span>Hello, {{username}}</span></p></a></li>
           <li><a (click)="logoff()" class="search-btn" style="cursor: pointer;"><i class="fa fa-power-off"></i></a></li>
         </ul>
